--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "firebase": "^12.4.0",
+    "firebase-admin": "^13.5.0",
+    "googleapis": "^164.1.0",
+    "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-icons": "^5.5.0"
+    "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
