--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.916.0",
+    "@aws-sdk/s3-request-presigner": "^3.916.0",
     "@hookform/resolvers": "^5.2.2",
     "appwrite": "^21.2.1",
     "firebase": "^12.4.0",
