--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.916.0",
+    "@aws-sdk/cloudfront-signer": "^3.916.0",
     "@aws-sdk/s3-request-presigner": "^3.916.0",
     "@hookform/resolvers": "^5.2.2",
     "appwrite": "^21.2.1",
@@ -17,6 +18,8 @@
     "firebase-admin": "^13.5.0",
     "framer-motion": "^12.23.24",
     "googleapis": "^164.1.0",
+    "hls": "^0.0.1",
+    "hls.js": "^1.6.13",
     "lucide-react": "^0.546.0",
     "next": "15.5.6",
     "node-appwrite": "^20.2.1",
