--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "resend": "^6.5.2",
     "sharp": "^0.34.5",
     "zod": "^4.1.12"
   },
