--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.546.0",
     "next": "16.0.7",
     "node-appwrite": "^20.2.1",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
