--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/cloudfront-signer": "^3.916.0",
     "@aws-sdk/s3-request-presigner": "^3.916.0",
     "@hookform/resolvers": "^5.2.2",
+    "@supabase/supabase-js": "^2.87.1",
     "appwrite": "^21.2.1",
     "dotenv": "^17.2.3",
     "firebase": "^12.4.0",
