concert ticketing system basic done

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/s3-request-presigner": "^3.956.0",
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/qrcode": "^1.5.6",
     "@vercel/analytics": "^1.6.1",
     "appwrite": "^21.5.0",
     "dotenv": "^17.2.3",
@@ -24,12 +25,15 @@
     "heic-convert": "^2.1.0",
     "hls": "^0.0.1",
     "hls.js": "^1.6.15",
+    "html5-qrcode": "^2.3.8",
     "lucide-react": "^0.546.0",
     "mojoauth-web-sdk": "^1.17.19",
     "next": "16.1.0",
     "node-appwrite": "^20.3.0",
     "node-fetch": "^2.7.0",
     "nodemailer": "^7.0.11",
+    "pdf-lib": "^1.17.1",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.69.0",
