--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.956.0",
+    "@aws-sdk/client-ses": "^3.971.0",
     "@aws-sdk/cloudfront-signer": "^3.956.0",
     "@aws-sdk/s3-request-presigner": "^3.956.0",
     "@hookform/resolvers": "^5.2.2",
     "@supabase/supabase-js": "^2.89.0",
     "@types/qrcode": "^1.5.6",
+    "@upstash/qstash": "^2.8.4",
     "@vercel/analytics": "^1.6.1",
     "appwrite": "^21.5.0",
     "dotenv": "^17.2.3",
