--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/qrcode": "^1.5.6",
     "@upstash/qstash": "^2.8.4",
     "@vercel/analytics": "^1.6.1",
+    "@vercel/speed-insights": "^1.3.1",
     "appwrite": "^21.5.0",
     "dotenv": "^17.2.3",
     "firebase": "^12.7.0",
